--- a/src/FXML/Toilet.fxml
+++ b/src/FXML/Toilet.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.ParkingController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.ToiletController">
     <children>
         <Pane prefHeight="600.0" prefWidth="1100.0">
             <WebView fx:id="webView" layoutX="50.0" layoutY="89.0" prefHeight="280.0" prefWidth="1000.0" />
