--- a/src/FXML/forest_lodge_detail.fxml
+++ b/src/FXML/forest_lodge_detail.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.ForestLodgeDetailController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="849.0" prefWidth="1104.0" styleClass="main" stylesheets="@CSS/application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.ForestLodgeDetailController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fb8ff00" height="843.0" layoutX="3.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="1096.0" />
       <WebView fx:id="webView" layoutX="774.0" layoutY="13.0" prefHeight="516.0" prefWidth="314.0" />
@@ -24,14 +24,14 @@
             <TableColumn fx:id="tc_writer" prefWidth="91.0" text="작성자" />
          </columns>
       </TableView>
-      <Button fx:id="btn_registerReview" layoutX="1015.0" layoutY="548.0" mnemonicParsing="false" onAction="#registerReview" text="리뷰 등록" />
-      <TextArea fx:id="ta_reviewContent" layoutX="769.0" layoutY="574.0" prefHeight="236.0" prefWidth="314.0"/>
-      <ComboBox fx:id="cb_star" layoutX="935.0" layoutY="548.0" prefHeight="23.0" prefWidth="68.0" promptText="별점" />
-      <Text layoutX="769.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="리뷰 작성" wrappingWidth="91.99999862909317">
+      <Button fx:id="btn_registerReview" layoutX="1008.0" layoutY="544.0" mnemonicParsing="false" onAction="#registerReview" text="리뷰 등록" />
+      <TextArea fx:id="ta_reviewContent" layoutX="769.0" layoutY="574.0" prefHeight="236.0" prefWidth="314.0" />
+      <ComboBox fx:id="cb_star" layoutX="924.0" layoutY="544.0" prefHeight="27.0" prefWidth="74.0" promptText="별점" />
+      <Text layoutX="769.0" layoutY="566.0" strokeType="OUTSIDE" strokeWidth="0.0" text="리뷰 작성" wrappingWidth="92.0">
          <font>
             <Font size="18.0" />
          </font></Text>
-      <Button fx:id="btn_registerImg" layoutX="874.0" layoutY="548.0" mnemonicParsing="false" onAction="#registerImg" text="이미지" />
+      <Button fx:id="btn_registerImg" layoutX="863.0" layoutY="544.0" mnemonicParsing="false" onAction="#registerImg" text="이미지" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="285.0" layoutX="16.0" layoutY="8.0" stroke="BLACK" strokeType="INSIDE" width="736.0" />
       <Text fx:id="t_name" layoutX="59.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="휴양림명 : ">
          <font>
