--- a/src/FXML/mypage.fxml
+++ b/src/FXML/mypage.fxml
@@ -5,82 +5,87 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="559.0" prefWidth="1001.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.MypageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="559.0" prefWidth="1001.0" styleClass="mypage" stylesheets="@CSS/mypage.css" xmlns="http://javafx.com/javafx/8.0.201" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FxController.MypageController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="553.0" layoutX="5.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="991.0" />
-      <TableView fx:id="tv_favorite" layoutX="45.0" layoutY="78.0" onMouseClicked="#doubleClickFavorite" prefHeight="180.0" prefWidth="348.0">
+      <TableView fx:id="tv_favorite" layoutX="35.0" layoutY="78.0" onMouseClicked="#doubleClickFavorite" prefHeight="180.0" prefWidth="348.0">
         <columns>
           <TableColumn fx:id="tc_favoriteType" prefWidth="83.0" text="구분" />
           <TableColumn fx:id="tc_favoriteName" prefWidth="264.0" text="이름" />
         </columns>
       </TableView>
-      <TableView fx:id="tv_recent" layoutX="45.0" layoutY="339.0" onMouseClicked="#doubleClickRecent" prefHeight="180.0" prefWidth="348.0">
+      <TableView fx:id="tv_recent" layoutX="35.0" layoutY="351.0" onMouseClicked="#doubleClickRecent" prefHeight="180.0" prefWidth="348.0">
          <columns>
             <TableColumn fx:id="tc_recentType" prefWidth="83.0" text="구분" />
             <TableColumn fx:id="tc_recentName" prefWidth="264.0" text="이름" />
          </columns>
       </TableView>
-      <TableView fx:id="tv_review" layoutX="419.0" layoutY="260.0" onMouseClicked="#doubleClickReview" prefHeight="259.0" prefWidth="553.0">
+      <TableView fx:id="tv_review" layoutX="416.0" layoutY="272.0" onMouseClicked="#doubleClickReview" prefHeight="259.0" prefWidth="553.0">
          <columns>
             <TableColumn fx:id="tc_reviewDate" prefWidth="82.0" text="작성날짜" />
             <TableColumn fx:id="tc_reviewName" prefWidth="118.0" text="여행지 이름" />
             <TableColumn fx:id="tc_reviewContent" prefWidth="352.0" text="리뷰내용" />
          </columns>
       </TableView>
-      <Button fx:id="btn_deleteFavorite" layoutX="340.0" layoutY="43.0" mnemonicParsing="false" onAction="#deleteFavorite" text="삭제" />
-      <Button fx:id="btn_deleteReview" layoutX="922.0" layoutY="226.0" mnemonicParsing="false" onAction="#deleteReview" text="삭제" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#10304312" height="180.0" layoutX="419.0" layoutY="24.0" stroke="BLACK" strokeType="INSIDE" width="553.0" />
-      <Text fx:id="t_id" layoutX="456.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID : ">
+      <Button fx:id="btn_deleteFavorite" layoutX="324.0" layoutY="43.0" mnemonicParsing="false" onAction="#deleteFavorite" prefHeight="27.0" prefWidth="55.0" text="삭제" />
+      <Button fx:id="btn_deleteReview" layoutX="911.0" layoutY="238.0" mnemonicParsing="false" onAction="#deleteReview" prefHeight="27.0" prefWidth="55.0" text="삭제" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#10304312" height="180.0" layoutX="416.0" layoutY="24.0" stroke="BLACK" strokeType="INSIDE" width="553.0" />
+      <Text layoutX="835.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="회원 정보" wrappingWidth="128.0">
          <font>
-            <Font size="14.0" />
-         </font></Text>
-      <Text fx:id="t_name" layoutX="443.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="이름 : ">
-         <font>
-            <Font size="14.0" />
-         </font></Text>
-      <Text fx:id="t_age" layoutX="443.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="나이 : ">
-         <font>
-            <Font size="14.0" />
-         </font></Text>
-      <Text fx:id="t_gender" layoutX="443.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="성별 : ">
-         <font>
-            <Font size="14.0" />
-         </font></Text>
-      <Text fx:id="t_address" layoutX="443.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="주소 : ">
-         <font>
-            <Font size="14.0" />
-         </font></Text>
-      <TextField fx:id="tfId" layoutX="495.0" layoutY="35.0" />
-      <TextField fx:id="tfAge" layoutX="495.0" layoutY="96.0" />
-      <TextField fx:id="tfName" layoutX="495.0" layoutY="64.0" />
-      <TextField fx:id="tfAddress" layoutX="724.0" layoutY="165.0" prefHeight="23.0" prefWidth="211.0" />
-      <Text layoutX="45.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="즐겨찾기" wrappingWidth="118.0">
-         <font>
-            <Font size="28.0" />
+            <Font name="Cafe24 Ssurround" size="28.0" />
          </font>
       </Text>
-      <Text layoutX="45.0" layoutY="315.0" strokeType="OUTSIDE" strokeWidth="0.0" text="최근 조회" wrappingWidth="164.0">
+      <Text fx:id="t_id" layoutX="446.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID : ">
          <font>
-            <Font size="28.0" />
+            <Font size="14.0" />
+         </font></Text>
+      <Text fx:id="t_name" layoutX="433.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="이름 : ">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text fx:id="t_age" layoutX="433.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="나이 : ">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text fx:id="t_gender" layoutX="433.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="성별 : ">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <Text fx:id="t_address" layoutX="433.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="주소 : ">
+         <font>
+            <Font size="14.0" />
+         </font></Text>
+      <TextField fx:id="tfId" layoutX="485.0" layoutY="35.0" />
+      <TextField fx:id="tfAge" layoutX="485.0" layoutY="96.0" />
+      <TextField fx:id="tfName" layoutX="485.0" layoutY="64.0" />
+      <TextField fx:id="tfAddress" layoutX="714.0" layoutY="165.0" prefHeight="23.0" prefWidth="211.0" />
+      <Text layoutX="35.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="즐겨찾기">
+         <font>
+            <Font name="Cafe24 Ssurround" size="28.0" />
          </font>
       </Text>
-      <Button layoutX="834.0" layoutY="31.0" mnemonicParsing="false" onAction="#handleBtnModify" prefHeight="48.0" prefWidth="101.0" text="수정">
+      <Text layoutX="35.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="최근 조회" wrappingWidth="164.0">
+         <font>
+            <Font name="Cafe24 Ssurround" size="28.0" />
+         </font>
+      </Text>
+      <Button layoutX="782.0" layoutY="86.0" mnemonicParsing="false" onAction="#handleBtnModify" prefHeight="20.0" prefWidth="80.0" text="수정">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button layoutX="834.0" layoutY="93.0" mnemonicParsing="false" onAction="#handleBtnReg" prefHeight="48.0" prefWidth="101.0" text="등록">
+      <Button layoutX="874.0" layoutY="86.0" mnemonicParsing="false" onAction="#handleBtnReg" prefHeight="20.0" prefWidth="80.0" text="등록">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Text layoutX="419.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" text="내가 작성한 리뷰" wrappingWidth="263.0000030994415">
+      <Text layoutX="416.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="내가 작성한 리뷰" wrappingWidth="263.0000030994415">
          <font>
-            <Font size="28.0" />
+            <Font name="Cafe24 Ssurround" size="28.0" />
          </font>
       </Text>
-      <ComboBox fx:id="cbBoxDo" layoutX="495.0" layoutY="165.0" onAction="#handleCbBoxDo" prefHeight="23.0" prefWidth="111.0" />
-      <ComboBox fx:id="cbBoxCity" layoutX="606.0" layoutY="165.0" prefHeight="23.0" prefWidth="118.0" />
-      <ComboBox fx:id="cbBoxGender" layoutX="495.0" layoutY="131.0" prefHeight="23.0" prefWidth="55.0" />
+      <ComboBox fx:id="cbBoxDo" layoutX="485.0" layoutY="165.0" onAction="#handleCbBoxDo" prefHeight="23.0" prefWidth="111.0" />
+      <ComboBox fx:id="cbBoxCity" layoutX="596.0" layoutY="165.0" prefHeight="23.0" prefWidth="118.0" />
+      <ComboBox fx:id="cbBoxGender" layoutX="485.0" layoutY="131.0" prefHeight="23.0" prefWidth="55.0" />
    </children>
 </AnchorPane>
